# DeepSeek-v4-Flash-DSpark-2x-DGX-Spark

./: .env.dspark.example  .gitignore  AGENTS.md  CREDITS.md  README.md  build-dspark-vllm-runtime.sh  docker-compose.dspark.yml  prepare-dspark-model-cache.sh  run-dspark-dual-gb10.sh  smoke-deepseek-v4-flash-dspark.sh  start-deepseek-v4-flash-dspark.sh  status-deepseek-v4-flash-dspark.sh  stop-deepseek-v4-flash-dspark.sh  validate-dspark-config.sh
benchmarks/: bench_concurrent.py  correctness_test.py  gsm8k_eval.py  needle_acceptance_sweep.py  staggered_bench.py
docs/: CONTAINER_REPRODUCIBILITY.md  DSPARK_R0B0TLAB_1M.md  DSPARK_R0B0TLAB_384K.md  SETUP.md  decode-speed-results.html
monitor/: README.md  sitecustomize.py
monitor/observer/: vllm_request_observer.py
monitor/recovery/: recover_deepseek_serving.py
monitor/sentinel/: model_serving_sentinel.py
profiles/: dspark-r0b0tlab-1m.env  dspark-r0b0tlab-384k.env
publication/: DSpark-r0b0tlab-384K.tar.gz.sha256  DSpark-r0b0tlab-test-results.html
publication/DSpark-r0b0tlab-384K/: MANIFEST.sha256  REPORT.md  dspark-r0b0tlab-384k.env
recipe/: Dockerfile.dspark-runtime-overlay
recipe/nvfp4/: Dockerfile.stage-a  Dockerfile.stage-b  Dockerfile.stage-c
recipe/overlay/vllm/models/deepseek_v4/nvidia/: dspark.py  (+1 more)
recipe/vllm/v1/spec_decode/: dspark_proposer.py
scripts/: ci-verify.sh
tests/: test_model_serving_sentinel.py  test_recover_deepseek_serving.py  test_vllm_request_observer.py
vllm_patch_gb10/: README.md  pyproject.toml
vllm_patch_gb10/vllm_gb10_hybrid_nvfp4/: __init__.py  config.py  kernel.py
(+2 files in other folders)
